[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/HUD.gd" type="Script" id=1]
[ext_resource path="res://game_assets/Lovers_Quarrel/LoversQuarrel-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = ExtResource( 2 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="MessageLabel" type="Label" parent="."]
anchor_left = 0.1
anchor_top = 0.75
anchor_right = 0.9
anchor_bottom = 0.95
margin_left = 0.0
margin_top = 0.0
margin_right = 0.0
margin_bottom = 0.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_shadow_color = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
align = 1
valign = 1
autowrap = true
visible = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="PoemBackground" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 0.7, 0.8, 0.9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PoemLabel" type="Label" parent="."]
visible = false
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
margin_left = 0.0
margin_top = 0.0
margin_right = 0.0
margin_bottom = 0.0
custom_colors/font_color = Color( 0.8, 0.1, 0.1, 1 )
custom_colors/font_shadow_color = Color( 0, 0, 0, 0.8 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
